--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -26,6 +26,8 @@ docker.io:
   - 1.18.0
   hashicorp/vault:
   - 1.17.2
+  istio/pilot:
+  - 1.22.1
   kubernetesui/dashboard:
   - v2.7.0
   kubernetesui/metrics-scraper:
