--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -5,6 +5,8 @@ docker.io:
   - 3
   bitnami/kubectl:
   - 1.29
+  bitnami/grafana-operator:
+  - 5.10.0-debian-12-r2
   cdkbot/hostpath-provisioner:
   - 1.5.0
   contentful/coredns-nodecache:
