--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -9,6 +9,8 @@ docker.io:
   - 5.10.0-debian-12-r2
   bitnami/redis-sentinel:
   - 7.2.5-debian-12-r2
+  bitnami/external-dns:
+  - 0.14.2-debian-12-r1
   cdkbot/hostpath-provisioner:
   - 1.5.0
   contentful/coredns-nodecache:
