fix: more images...

--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -41,6 +41,8 @@ docker.io:
   - v1.0.8
   l7mp/stunner-auth-server:
   - 0.19.0
+  l7mp/stunner-gateway-operator:
+  - 0.19.0
   netbirdio/dashboard:
   - v2.7.0
   netbirdio/management:
