--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -7,6 +7,8 @@ docker.io:
   - 1.29
   bitnami/grafana-operator:
   - 5.10.0-debian-12-r2
+  bitnami/redis:
+  - 7.2.5-debian-12-r2
   bitnami/redis-sentinel:
   - 7.2.5-debian-12-r2
   bitnami/external-dns:
