--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -13,6 +13,22 @@ docker.io:
   - 7.2.5-debian-12-r2
   bitnami/external-dns:
   - 0.14.2-debian-12-r1
+  bitnami/promtail:
+  - 2.9.3-debian-11-r0
+  bitnami/node-exporter:
+  - 1.8.2-debian-12-r1
+  bitnami/grafana-mimir:
+  - 2.13.0-debian-12-r3
+  bitnami/nginx:
+  - 1.27.0-debian-12-r4
+  bitnami/grafana-loki:
+  - 2.9.3-debian-11-r1
+  bitnami/prometheus-operator:
+  - 0.75.2-debian-12-r1
+  bitnami/kube-state-metrics:
+  - 2.13.0-debian-12-r2
+  bitnami/memcached:
+  - 1.6.29-debian-12-r3
   cdkbot/hostpath-provisioner:
   - 1.5.0
   contentful/coredns-nodecache:
