--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -23,12 +23,16 @@ docker.io:
   - 1.27.0-debian-12-r4
   bitnami/grafana-loki:
   - 2.9.3-debian-11-r1
+  bitnami/prometheus:
+  - 2.53.1-debian-12-r1
   bitnami/prometheus-operator:
   - 0.75.2-debian-12-r1
   bitnami/kube-state-metrics:
   - 2.13.0-debian-12-r2
   bitnami/memcached:
   - 1.6.29-debian-12-r3
+  bitnami/memcached-exporter:
+  - 0.14.2-debian-11-r0
   cdkbot/hostpath-provisioner:
   - 1.5.0
   contentful/coredns-nodecache:
