--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -21,6 +21,7 @@ docker.io:
   - 2.13.0-debian-12-r3
   bitnami/nginx:
   - 1.27.0-debian-12-r4
+  - 1.25.3-debian-11-r3
   bitnami/grafana-loki:
   - 2.9.3-debian-11-r1
   bitnami/prometheus:
@@ -31,6 +32,7 @@ docker.io:
   - 2.13.0-debian-12-r2
   bitnami/memcached:
   - 1.6.29-debian-12-r3
+  - 1.6.22-debian-11-r2
   bitnami/memcached-exporter:
   - 0.14.2-debian-11-r0
   cdkbot/hostpath-provisioner:
