--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -5,6 +5,12 @@ xpkg.upbound.io:
   - v0.8.0
   crossplane-contrib/function-patch-and-transform:
   - v0.2.1
+  - v0.9.0
+  - v0.9.1
+  crossplane-contrib/function-kcl:
+  - v0.11.3
+  crossplane-contrib/function-auto-ready:
+  - v0.4.2
   crossplane-contrib/provider-ansible:
   - v0.6.0
   crossplane-contrib/provider-aws:
