--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -20,3 +20,9 @@ xpkg.upbound.io:
   - v0.16.0
   upbound/provider-vault:
   - v1.0.0
+  upbound/provider-family-aws:
+  - v1.21.1
+  upbound/provider-aws-iam:
+  - v1.21.0
+  upbound/provider-aws-s3:
+  - v1.21.0
