--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -28,3 +28,7 @@ xpkg.upbound.io:
   - v1.21.0
   upbound/provider-aws-s3:
   - v1.21.0
+  upbound/provider-aws-docdb:
+  - v1.21.0
+  upbound/provider-aws-ec2:
+  - v1.21.0
