--- a/infra-images.yaml
+++ b/infra-images.yaml
@@ -10,6 +10,8 @@ xpkg.upbound.io:
   - v0.11.3
   crossplane-contrib/function-auto-ready:
   - v0.4.2
+  crossplane-contrib/function-extra-resources:
+  - v0.0.3
   crossplane-contrib/provider-ansible:
   - v0.6.0
   crossplane-contrib/provider-aws:
